# august-session

./: README.md  package-lock.json  package.json
browser-extension/: background.js  manifest.json
docs/: ARCHITECTURE.md  CODE_ORDER.md  COMPETITOR_ANALYSIS.md  FILE_STRUCTURE.md  FUTURE_ECOSYSTEM.md  IMPLEMENTATION_TASKS.md  MODULE_DEPENDENCY_GRAPH.md  MVP_IMPLEMENTATION_PLAN.md  PRODUCT_VISION.md  PROJECT_PLAN.md  RUN_TASK.md  V010_CODE_ORDER.md  V010_FILE_STRUCTURE.md  V010_IMPLEMENTATION_PLAN.md  V010_IMPLEMENTATION_TASKS.md  V010_MODULE_DEPENDENCY_GRAPH.md  V020_CODE_ORDER.md  V020_FILE_STRUCTURE.md  V020_IMPLEMENTATION_PLAN.md  V020_IMPLEMENTATION_TASKS.md  V020_MODULE_DEPENDENCY_GRAPH.md  V030_IMPLEMENTATION_PLAN.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_server.rs  capture.rs  db.rs  explorer.rs  main.rs  title_parser.rs  tray.rs  window_manager.rs
src/components/: RememberList.vue
src/plugins/: vuetify.ts
src/views/: PauseOverlay.vue  ResumeView.vue
