[package]
name = "august-session"
version = "0.1.0"
description = "August Session Workspace Time Machine"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "global-shortcut-all", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
xcap = "0.9.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "processthreadsapi", "winbase", "shellapi"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

